Logolás-konfigurálásának értékének lekezelése

--- a/config.properties
+++ b/config.properties
@@ -3,5 +3,5 @@
 # and open the template in the editor.
  
 # F\u00e1jl|Konzol
-Logol\u00e1s-konfigur\u00e1l\u00e1sa=Konzol
+Logol\u00e1s-konfigur\u00e1l\u00e1sa=b\u00e1rmilyen sz\u00f6veget \u00edrok be m\u0171k\u00f6dni fog a f\u00e1jl logol\u00f3!
 
